--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: Poppins;
-    src: url(https://fonts.google.com/specimen/Poppins);
+    src: url(/assets/fonts/Poppins-Bold.ttf);
 }
 
 body {
