--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
 body {
     font-family: Poppins, sans-serif;
     background-color: var(--offwhite);
+    min-width: fit-content;
 }
 
 .sr-only {
@@ -51,14 +52,14 @@ body {
     position: absolute;
     height: 70px;
     width: 10vw;
-    min-width: 120px;
-    font-size: 32px;
+    min-width: 100px;
+    font-size: 1.5rem;
     font-family: Poppins, sans-serif;
     font-weight: 700;
     border-radius: 10px;
     border: 1px solid var(--lightgrey);
     color: var(--offblack);
-    text-indent: 25px;
+    text-indent: 10px;
     transition: 0.5s;
 }
 
@@ -86,12 +87,11 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-@media only screen and (max-width: 991px) { /* Mobile */ 
     main {
         margin: 75px auto;
         padding: 50px 50px;
         width: 50vw;
-        min-width: 350px;
+        min-width: 260px;
         height: 60vh;
         background-color: var(--white);
         border-radius: 50px 50px 200px 50px;
@@ -112,17 +112,17 @@ input::-webkit-inner-spin-button {
 
     .day-number {
         left: 7%;
-        top: 12%;
+        top: 14%;
     }
     
     .month-number {
         left: 37%;
-        top: 12%;
+        top: 14%;
     }
     
     .year-number {
         left: 68%;
-        top: 12%;
+        top: 14%;
     }
 
     .day-error {
@@ -167,7 +167,7 @@ input::-webkit-inner-spin-button {
         width: 80px;
         position: absolute;
         top: 28%;
-        left: 45%;
+        left: 40%;
         background: url(assets/images/icon-arrow.svg);
         background-repeat: no-repeat;
         background-color: var(--purple);
@@ -183,14 +183,14 @@ input::-webkit-inner-spin-button {
         margin-left: 5%;
         font-weight: 800;
         font-style: italic;
-        font-size: calc(3.9rem + .3vw);
+        font-size: calc(2.9rem + .3vw);
         color: var(--offblack);
     }
 
     .output-section > p:nth-child(n+2) {
         margin-top: -25px;
     }
-}
+
 
 @media only screen and (min-width: 992px) { /* Desktops & Laptops */
     main {
@@ -255,7 +255,7 @@ input::-webkit-inner-spin-button {
     }
 
     .input-section {
-        margin-bottom: 210px;
+        margin-bottom: 300px;
     }
 
     .divider {
